Name:                biopsl
Version:             0
Synopsis:            Library and executables for working with PSL files
Description:         The library contains the functionality for reading and writing
		     PSL files (alignment data, e.g. from BLAT output). It duplicates
		     code from (and is incompatible with) the "bio" library.
Homepage:            http://biohaskell.org/
License:             LGPL
Author:              Ketil Malde
Maintainer:          ketil@malde.org
Stability:           Experimental
Category:            Bioinformatics
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules: Bio.Alignment.PSL
  Build-depends:   base >= 3 && < 5, biocore, bytestring
  Hs-Source-Dirs:  src
  Ghc-Options:     -Wall
